html set up with mobile first design

--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>FAQ Accordion Card</title>
 </head>
 <body>
-<main>
+<main class="card">
+    <section class="faqContainer">
+        <h1>faq</h1>
+        <button type="button" class="toggle">How many team members can I invite?</button>
+        <div class="content">
+            <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="downArrow"/>
+            <p> </p>
+        </div>
+        <button type="button" class="toggle">What is the maximum file upload size?</button>
+        <div class="content">
+            <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="downArrow"/>
+            <p> </p>
+        </div>
+        <button type="button" class="toggle">How do I reset my password?</button>
+        <div class="content">
+            <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="downArrow"/>
+            <p> </p>
+        </div>
+        <button type="button" class="toggle">Can I cancel my subscription?</button>
+        <div class="content">
+            <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="downArrow"/>
+            <p> </p>
+        </div>
+        <button type="button" class="toggle">Do you provide additional support?</button>
+        <div class="content">
+            <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="downArrow"/>
+            <p> </p>
+        </div>
+    </section>
+    <section class="prettyContainer">
+        <img src="Assets/illustration-woman-online-mobile.svg" alt="illustration of woman online" id="womanOnlineImage"/>
+        <img src="Assets/bg-pattern-mobile.svg" alt="box shadow" id="boxShadow"/>
 
+    </section>
 </main>
 </body>
 </html>
