--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/14c42a68eb.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <title>FAQ Accordion Card | Johanna Loe</title>
 </head>
@@ -83,8 +84,11 @@
     </div>
 
 </main>
-<!--<footer>-->
-<!--    <p class="credit">Challenge by Frontend Mentor. Coded By Johanna Loe</p>-->
-<!--</footer>-->
+<footer>
+    <p class="credit">Challenge by Frontend Mentor. Coded By Johanna Loe</p>
+    <a href="https://github.com/JVLoe" target="_blank" class="githubLink">
+        <i class="fa-brands fa-github"></i>
+    </a>
+</footer>
 </body>
 </html>
