--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- viewport meta data tag changing from mobile to desktop-->
+
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+
     <script src="https://kit.fontawesome.com/14c42a68eb.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
+
     <title>FAQ Accordion Card | Johanna Loe</title>
 </head>
 <body>
