added working js, everything is still a mess. e.g. css not working as intended, old files for reference

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 <body>
 <main>
-    <section class="questionContainer">
+    <section class="card">
         <h1>faq</h1>
 
-        <article>
-            <div class="question">
+        <article class="questionContainer">
+            <div class="questionTitleAndButton">
                 <p class="questionTitle">How many team members can I invite?</p>
                 <button type="button" class="questionToggle">
                     <span>
@@ -30,14 +30,14 @@
                     </span>
                 </button>
             </div>
-            <div class="panel">
+            <div class="answerContainer">
                 <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on
                     team members for the Premium plan.</p>
             </div>
         </article>
 
-        <article>
-            <div class="question">
+        <article class="questionContainer">
+            <div class="questionTitleAndButton">
                 <p class="questionTitle">What is the maximum file upload size?</p>
                 <button type="button" class="questionToggle">
                     <span>
@@ -45,14 +45,14 @@
                     </span>
                 </button>
             </div>
-            <div class="panel">
+            <div class="answerContainer">
                 <p class="answer">No more than 2GB. All files in your account must fit your allotted storage
                     space.</p>
             </div>
         </article>
 
-        <article>
-            <div class="question">
+        <article class="questionContainer">
+            <div class="questionTitleAndButton">
                 <p class="questionTitle">How do I reset my password?</p>
                 <button type="button" class="questionToggle">
                     <span>
@@ -60,14 +60,14 @@
                     </span>
                 </button>
             </div>
-            <div class="panel">
+            <div class="answerContainer">
                 <p class="answer">Click “Forgot password” from the login page or “Change password” from your
                     profile page. A reset link will be emailed to you.</p>
             </div>
         </article>
 
-        <article>
-            <div class="question">
+        <article class="questionContainer">
+            <div class="questionTitleAndButton">
                 <p class="questionTitle">Can I cancel my subscription?</p>
                 <button type="button" class="questionToggle">
                     <span>
@@ -75,13 +75,13 @@
                     </span>
                 </button>
             </div>
-            <div class="panel">
+            <div class="answerContainer">
                 <p class="answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
             </div>
         </article>
 
-        <article>
-            <div class="question">
+        <article class="questionContainer">
+            <div class="questionTitleAndButton">
                 <p class="questionTitle">Do you provide additional support?</p>
                 <button type="button" class="questionToggle">
                     <span>
@@ -89,7 +89,7 @@
                     </span>
                 </button>
             </div>
-            <div class="panel">
+            <div class="answerContainer">
                 <p class="answer">Chat and email support is available 24/7. Phone lines are open during normal
                     business hours.</p>
             </div>
