--- a/index.old.html
+++ b/index.old.html
@@ -6,7 +6,7 @@
 <!-- viewport meta data tag changing from mobile to desktop-->
 
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.old.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
             <div class="questionContainer">
                 <button type="button" class="question">How many team members can I invite?</button>
                 <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="arrowDown"/>
-                <div class="panel">
+                <div class="answerContainer">
                     <p class="content">You can invite up to 2 additional users on the Free plan. There is no limit on
                         team members for the Premium plan.</p>
                 </div>
@@ -42,7 +42,7 @@
             <div class="questionContainer">
                 <button type="button" class="question">What is the maximum file upload size?</button>
                 <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="arrowDown"/>
-                <div class="panel">
+                <div class="answerContainer">
                     <p class="content">No more than 2GB. All files in your account must fit your allotted storage
                         space.</p>
                 </div>
@@ -52,7 +52,7 @@
             <div class="questionContainer">
                 <button type="button" class="question">How do I reset my password?</button>
                 <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="arrowDown"/>
-                <div class="panel">
+                <div class="answerContainer">
                     <p class="content">Click “Forgot password” from the login page or “Change password” from your
                         profile page. A reset link will be emailed to you.</p>
                 </div>
@@ -62,7 +62,7 @@
             <div class="questionContainer">
                 <button type="button" class="question">Can I cancel my subscription?</button>
                 <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="arrowDown"/>
-                <div class="panel">
+                <div class="answerContainer">
                     <p class="content">Yes! Send us a message and we’ll process your request no questions asked.</p>
                 </div>
             </div>
@@ -71,7 +71,7 @@
             <div class="questionContainer">
                 <button type="button" class="question">Do you provide additional support?</button>
                 <img src="Assets/icon-arrow-down.svg" alt="icon down arrow" class="arrowDown"/>
-                <div class="panel">
+                <div class="answerContainer">
                     <p class="content">Chat and email support is available 24/7. Phone lines are open during normal
                         business hours.</p>
                 </div>
