added label to github link to make more accessible

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <p class="credit">Challenge by Frontend Mentor. Coded By Johanna Loe</p>
     <a href="https://github.com/JVLoe" target="_blank" class="githubLink">
         <i class="fa-brands fa-github"></i>
+        <span>GitHub</span>
     </a>
 </footer>
 </body>
